--- a/gita-backend-service/gita-backend-service-user/pom.xml
+++ b/gita-backend-service/gita-backend-service-user/pom.xml
@@ -24,7 +24,12 @@
 	</properties>
 
 	<dependencies>
-	</dependencies>
+        <dependency>
+            <groupId>com.gita.backend</groupId>
+            <artifactId>gita-backend-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
