添加跨域处理

--- a/gita-backend-service/gita-backend-service-task/src/main/resources/application-dev.yml
+++ b/gita-backend-service/gita-backend-service-task/src/main/resources/application-dev.yml
@@ -32,5 +32,5 @@ xxl:
     app-name: ${spring.application.name}
     ip:
     port: 9998
-    log-path: ${log-path}/${spring.application.name}/jobhandler/
+    log-path: /${spring.application.name}/jobhandler/
     access-token:
