--- a/gita-backend-service/gita-backend-service-user/pom.xml
+++ b/gita-backend-service/gita-backend-service-user/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>gita-backend-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+		<!-- session -->
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+		</dependency>
     </dependencies>
 
 
