--- a/gita-backend-web/pom.xml
+++ b/gita-backend-web/pom.xml
@@ -51,6 +51,25 @@
 			<version>0.2.0</version>
 		</dependency>
 
+		<!--redis-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<!--commons-pool-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+
 		<!-- 二维码支持包 -->
 		<dependency>
 			<groupId>com.google.zxing</groupId>
