--- a/gita-backend-service/gita-backend-service-user/src/main/resources/application.yml
+++ b/gita-backend-service/gita-backend-service-user/src/main/resources/application.yml
@@ -14,4 +14,6 @@ mybatis:
     map-underscore-to-camel-case: true
   mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.gita.backend.model
-
+server:
+  servlet:
+    context-path: /user
