--- a/gita-backend-web/src/main/resources/application-dev.yml
+++ b/gita-backend-web/src/main/resources/application-dev.yml
@@ -17,3 +17,7 @@ redis:
   redisMinIdle: 50
   redisTimeout: 3000
   redisMaxAttempts: 5
+logging:
+  level:
+    org.springframework.security: info
+  path: /usr/local/project/logs/@project.artifactId@
